<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_input_lable_style"
                android:text="@string/add_input_title"/>

            <EditText
                android:id="@+id/title_input"
                style="@style/add_input_edit_style"
                android:hint="@string/add_input_title_hint"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/user_input"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_input_lable_style"
                android:text="@string/add_input_user"/>

            <EditText
                android:id="@+id/user_input"
                style="@style/add_input_edit_style"
                android:hint="@string/add_input_user_hint"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/password_input"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_input_lable_style"
                android:text="@string/add_input_password"/>

            <EditText
                android:id="@+id/password_input"
                style="@style/add_input_edit_style"
                android:hint="@string/add_input_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/method_input"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_input_lable_style"
                android:text="@string/add_input_method"/>

            <EditText
                android:id="@+id/method_input"
                style="@style/add_input_edit_style"
                android:hint="@string/add_input_method_hint"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <Button
            android:id="@+id/next1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onViewClick"
            android:text="@string/add_input_next"/>

    </LinearLayout>
</ScrollView>