<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_input_lable_style"
                android:text="@string/add_input_email"/>

            <EditText
                android:id="@+id/email_input"
                style="@style/add_input_edit_style"
                android:hint="@string/add_input_email_hint"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/phone_input"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_input_lable_style"
                android:text="@string/add_input_phone"/>

            <EditText
                android:id="@+id/phone_input"
                style="@style/add_input_edit_style"
                android:hint="@string/add_input_phone_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:nextFocusForward="@+id/address_input"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_input_lable_style"
                android:text="@string/add_input_address"/>

            <EditText
                android:id="@+id/address_input"
                style="@style/add_input_edit_style"
                android:hint="@string/add_input_address_hint"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/description_input"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/add_input_lable_style"
                android:text="@string/add_input_description"/>

            <EditText
                android:id="@+id/description_input"
                style="@style/add_input_edit_style"
                android:hint="@string/add_input_description_hint"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onViewClick"
                android:text="@string/add_input_previous"/>

            <Button
                android:id="@+id/next2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onViewClick"
                android:text="@string/add_input_next"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>